--- a/sampleweb/pom.xml
+++ b/sampleweb/pom.xml
@@ -53,6 +53,18 @@
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.2</version>
         </plugin>
+        
+    <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:7070/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/sampleweb</path>
+		</configuration>
+	</plugin>
+        
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
